--- a/BLOG-ENEM/index.css
+++ b/BLOG-ENEM/index.css
@@ -1,15 +1,24 @@
 header {
   justify-content: center;
   display: flex;
-  border: 1px solid blue;
-  text-align: center;
+   text-align: center; 
+  background-color: black;
+  color: aliceblue;
 }
 
 footer {
   justify-content: center;
   display: flex;
-  border: 1px solid blue;
+  border: 1px solid gray;
+  background-color: gray;
+  max-width: 1110px;
+
 }
+
+body {
+  font-family: 'poppins', sans-serif;
+}
+
 
 section {
   justify-content: center;
@@ -24,8 +33,9 @@ div {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-color: antiquewhite;
+background-color: bisque;
   border-bottom: 2px;
+border-radius: 30px;
 }
 
 /* 
@@ -56,4 +66,13 @@ div {
 img {
   width: 400px;
   height: 400px;
+  border-radius: 30px;
+}
+
+button {
+  border-radius: 30px;
+}
+
+body {
+  background-color: #5E626d;
 }
