--- a/BLOG-ENEM/index.css
+++ b/BLOG-ENEM/index.css
@@ -1,9 +1,54 @@
-header {
-  justify-content: center;
+/* header {
+  justify-content:center;
   display: flex;
-   text-align: center; 
+  text-align: center;
   background-color: black;
   color: aliceblue;
+  flex-direction: row;
+  align-items: center;
+
+
+} */
+
+
+.fixo {
+  align-items: center;
+  justify-content :space-between;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  flex-direction:row;
+  display: flex;
+  color: blueviolet;
+
+}
+
+.navegar {
+  display: flex;
+background-color: black;
+margin-left: 16px;
+justify-content: start;
+flex: 1, 1, 0%;
+
+}
+
+.pesquisar {
+  display: flex;
+  background-color: black;
+align-items: center;
+justify-content: right;
+margin-right: 16px;
+;
+}
+
+.logo {
+  display: flex;
+background-color: black;
+align-items: center;
+/* justify-content:start; */
+width: 16px;
+height: 16px;
+
 }
 
 footer {
@@ -33,9 +78,9 @@ div {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-background-color: bisque;
+  background-color: bisque;
   border-bottom: 2px;
-border-radius: 30px;
+  border-radius: 30px;
 }
 
 /* 
