--- a/BLOG-ENEM/index.css
+++ b/BLOG-ENEM/index.css
@@ -1,14 +1,46 @@
-header {
-  justify-content: center;
-  display: flex;
-  border: 1px solid blue;
-  text-align: center;
+body {
+  color: white;
 }
 
-footer {
+header {
+  background-color: pink;
+  display: flex;
+  justify-content: space-between;
+}
+header figure {
+  width: 20%;
+  background-color:rgb(135, 206, 235);;
+}
+
+.headerRight {
+  width: 80%;
+  background-color:rgb(135, 206, 235);;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  
+
+}
+
+nav ul {
+  display: flex;
+  gap: 10px;
+}
+nav ul li a {
+  text-decoration: none;
+}
+
+nav ul li {
+  list-style: none;
+}
+footer {
+  justify-content: space-between;
   display: flex;
   border: 1px solid blue;
+  flex-direction: column;
+  text-align: center;
+  background-color:rgb(0, 0, 139);;
 }
 
 section {
@@ -17,19 +49,17 @@ section {
   flex-wrap: wrap;
 }
 
-div {
-  width: 400px;
-  height: 400px;
+article {
+  width: 300px;
+  height: 300px;
   margin: 12px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-color: antiquewhite;
-  border-bottom: 2px;
+  background-color:rgb(65, 105, 225);;
 }
 
-/* 
-.temas {
+/* .temas {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -52,8 +82,12 @@ div {
   justify-content: space-between;
   flex-direction: column;
 } */
-
-img {
+*/ img {
   width: 400px;
   height: 400px;
+}
+
+header img {
+  width: 100px;
+  height: 100px;
 }
