--- a/BLOG-ENEM/global.css
+++ b/BLOG-ENEM/global.css
@@ -1,9 +1,10 @@
 body {
     color: white;
+    background-color: black;
   }
   
   header {
-    background-color: pink;
+    background-color:blue;
     display: flex;
     justify-content: space-between;
   }
@@ -26,6 +27,7 @@ body {
   nav ul {
     display: flex;
     gap: 10px;
+    text-decoration: none;
   }
   nav ul li a {
     text-decoration: none;
@@ -43,50 +45,15 @@ body {
     background-color:rgb(0, 0, 139);;
   }
   
+  body {
+    font-family: 'poppins', sans-serif;
+  }
+  
   section {
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
   }
-  
-  article {
-    width: 300px;
-    height: 300px;
-    margin: 12px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    background-color:rgb(65, 105, 225);;
-  }
-  
-  /* .temas {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  
-  .reper {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  
-  .formulas {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  }
-  
-  .geografia {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-  } */
-  */ img {
-    width: 400px;
-    height: 400px;
-  }
-  
   header img {
     width: 100px;
     height: 100px;
