--- a/BLOG-ENEM/index.css
+++ b/BLOG-ENEM/index.css
@@ -1,69 +1,16 @@
-<<<<<<< HEAD
 body {
   color: white;
-=======
-/* header {
-  justify-content:center;
-  display: flex;
-  text-align: center;
-  background-color: black;
-  color: aliceblue;
-  flex-direction: row;
-  align-items: center;
-
-
-} */
-
-
-.fixo {
-  align-items: center;
-  justify-content :space-between;
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  flex-direction:row;
-  display: flex;
-  color: blueviolet;
-
-}
-
-.navegar {
-  display: flex;
-background-color: black;
-margin-left: 16px;
-justify-content: start;
-flex: 1, 1, 0%;
-
-}
-
-.pesquisar {
-  display: flex;
-  background-color: black;
-align-items: center;
-justify-content: right;
-margin-right: 16px;
-;
-}
-
-.logo {
-  display: flex;
-background-color: black;
-align-items: center;
-/* justify-content:start; */
-width: 16px;
-height: 16px;
-
->>>>>>> 98e14e41d53165bf3bb3707812853387a7dd3851
+  background-color: #001736;
 }
 
 header {
-  background-color: pink;
+  background-color:#00183e;
   display: flex;
   justify-content: space-between;
 }
 header figure {
   width: 20%;
-  background-color:rgb(135, 206, 235);;
+  background-color:#79d7fd;
 }
 
 .headerRight {
@@ -77,9 +24,14 @@ header figure {
 
 }
 
+section button a  {
+  text-decoration: none;
+}
+
 nav ul {
   display: flex;
   gap: 10px;
+  text-decoration: none;
 }
 nav ul li a {
   text-decoration: none;
@@ -91,17 +43,10 @@ nav ul li {
 footer {
   justify-content: space-between;
   display: flex;
-<<<<<<< HEAD
   border: 1px solid blue;
   flex-direction: column;
   text-align: center;
-  background-color:rgb(0, 0, 139);;
-=======
-  border: 1px solid gray;
-  background-color: gray;
-  max-width: 1110px;
-
->>>>>>> 98e14e41d53165bf3bb3707812853387a7dd3851
+  background-color:#ffc54a;
 }
 
 body {
@@ -122,14 +67,11 @@ article {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-<<<<<<< HEAD
-  background-color:rgb(65, 105, 225);;
-=======
-  background-color: bisque;
-  border-bottom: 2px;
-  border-radius: 30px;
->>>>>>> 98e14e41d53165bf3bb3707812853387a7dd3851
+  background-color:#00bbfa;
+text-align: center;
+
 }
+
 
 /* .temas {
   display: flex;
@@ -154,23 +96,32 @@ article {
   justify-content: space-between;
   flex-direction: column;
 } */
-*/ img {
+*/ img  {
   width: 400px;
   height: 400px;
   border-radius: 30px;
 }
 
-<<<<<<< HEAD
+img:hover {
+  transform: scale(1.10);
+}
+
 header img {
   width: 100px;
   height: 100px;
 }
-=======
-button {
-  border-radius: 30px;
+
+
+
+
+.filmes {
+  height: 300px;
 }
 
-body {
-  background-color: #5E626d;
+
+
+.active { 
+  height: 600px;
+  width: 600px;
+  border-radius:30px;
 }
->>>>>>> 98e14e41d53165bf3bb3707812853387a7dd3851
