--- a/BLOG-ENEM/global.css
+++ b/BLOG-ENEM/global.css
@@ -1,7 +1,10 @@
 body {
     color: white;
     background-color: black;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
+
+  
   
   header {
     background-color:blue;
@@ -36,14 +39,7 @@ body {
   nav ul li {
     list-style: none;
   }
-  footer {
-    justify-content: space-between;
-    display: flex;
-    border: 1px solid blue;
-    flex-direction: column;
-    text-align: center;
-    background-color:rgb(0, 0, 139);;
-  }
+  
   
   body {
     font-family: 'poppins', sans-serif;
@@ -59,3 +55,15 @@ body {
     height: 100px;
   }
   
+
+
+  footer {
+    justify-content: space-between;
+    display: flex;
+    border: 1px solid blue;
+    flex-direction: column;
+    text-align: center;
+    background-color:#ffc54a;
+  }
+
+
