--- a/BLOG-ENEM/global.css
+++ b/BLOG-ENEM/global.css
@@ -13,7 +13,7 @@ body {
   }
   header figure {
     width: 20%;
-    background-color:rgb(135, 206, 235);;
+    background-color:black;;
   }
   
   .headerRight {
