--- a/BLOG-ENEM/index.css
+++ b/BLOG-ENEM/index.css
@@ -1,21 +1,22 @@
 body {
-  color: white;
-  background-color: #001736;
+  color:black;
+  background-color :white;
 }
 
 header {
   background-color:#00183e;
   display: flex;
   justify-content: space-between;
+  color:white ;
 }
 header figure {
   width: 20%;
-  background-color:#79d7fd;
+  background-color:black;
 }
 
 .headerRight {
   width: 80%;
-  background-color:rgb(135, 206, 235);;
+  background-color:black;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,10 +44,15 @@ nav ul li {
 footer {
   justify-content: space-between;
   display: flex;
-  border: 1px solid blue;
+  border: 1px solid bebebe;
   flex-direction: column;
   text-align: center;
-  background-color:#ffc54a;
+  background-color:#bebebe;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 10px 0;
+
 }
 
 body {
@@ -67,7 +73,7 @@ article {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-color:#00bbfa;
+  background-color:white;
 text-align: center;
 
 }
