--- a/BLOG-ENEM/global.css
+++ b/BLOG-ENEM/global.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
   }
 
