--- a/BLOG-ENEM/crase/crase.css
+++ b/BLOG-ENEM/crase/crase.css
@@ -5,3 +5,16 @@
     ;
     align-items: center;
 }
+
+main section div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+main h1 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
